# wide-table-bench

./: Cargo.toml  README.md  taplo.toml
src/: args.rs  data_source.rs  main.rs
