[package]
name = "wide-table-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1"
clap = { version = "4.4", features = ["derive"] }
env_logger = { version = "0.10", features = ["auto-color"] }
greptimedb-client = { git = "https://github.com/GreptimeTeam/greptimedb-ingester-rust.git", branch = "master" }
log = "0.4"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
